# -SO1_2S2024_201906562

./: README.md
HT1/: README.md
HT1/Imagesdocker/Goland/: dockerfile  main.go
HT1/Imagesdocker/locust/: main.py  requeriments.txt
HT1/cluster/: deployment.yaml  ingress.yaml  service.yaml
Proyecto1/Manuales/: Manual_Tecnico.md
Proyecto1/Rust_server/: Cargo.toml
Proyecto1/Rust_server/src/: main.rs
Proyecto1/containers/: readme.md
Proyecto1/containers/high_js/: Dockerfile  high.js
Proyecto1/containers/high_py/: high.py
Proyecto1/containers/low_js/: Dockerfile  low.js  package.json
Proyecto1/modulo/: .Module.symvers.cmd  .modules.order.cmd  .sysinfo_201906562.ko.cmd  .sysinfo_201906562.mod.cmd  .sysinfo_201906562.mod.o.cmd  .sysinfo_201906562.o.cmd  sysinfo_201906562.c  sysinfo_201906562.ko  sysinfo_201906562.mod  sysinfo_201906562.mod.c
Proyecto1/prueba/: Cargo.toml
Proyecto1/python_service/: docker-compose.yml  main.py  package-lock.json  requirements.txt
Proyecto1/scrip/: Gen_cont.sh
Proyecto2/Documentacion/: README.md
Proyecto2/locust/: locust.py
Tarea1/: .Module.symvers.cmd  .modules.order.cmd  .sysinfo.ko.cmd  .sysinfo.mod.cmd  .sysinfo.mod.o.cmd  .sysinfo.o.cmd  sysinfo.c  sysinfo.ko  sysinfo.mod  sysinfo.mod.c
Tarea2/: tarea2.sh
Tarea3/: .gitignore  README.md
Tarea3/modulo/: .Module.symvers.cmd  .modules.order.cmd  .sysinfo_201906562.ko.cmd  .sysinfo_201906562.mod.cmd  .sysinfo_201906562.mod.o.cmd  .sysinfo_201906562.o.cmd  Makefile  sysinfo_201906562.c  sysinfo_201906562.ko  sysinfo_201906562.mod  sysinfo_201906562.mod.c
(+40 files in other folders)
