[package]
name = "Rust_server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctrlc = "3.2"
reqwest = {version = "0.11.12", features = ["json"]}
tokio = {version = "1", features = ["full"]}
ureq = "2.5.0"
chrono = { version = "0.4", features = ["serde"] }


